Bug 530528 - Replies are not marked as "Replied" if a modified draft in IMAP Drafts folder is sent. r=irving, a=jcranmer